# process-api

./: .gitignore  Caddyfile  deno.json  index.html  main-menu.html  package-lock.json  package.json  playwright.config.js
_build_scripts/: build-component.ts  build-src.ts  build.ts
app/: routes.js
app/about/: about.html  about.js
app/activity-state/: activity-state.css  activity-state.html  activity-state.js
app/canvas/: canvas-worker.js  canvas.css  canvas.html  canvas.js  quadtree-worker.js
app/canvas-features/: canvas-features.css  canvas-features.html  canvas-features.js  canvas-worker.js
app/css-grid/: css-grid.css  css-grid.html  css-grid.js
app/dynamic-columns/: dynamic-columns.css  dynamic-columns.html  dynamic-columns.js
app/dynamic-layout/: dynamic-layout.css  dynamic-layout.html  dynamic-layout.js
app/form/: form.css  form.html  form.js  list-items.css
app/home/: home.css  home.html  home.js
app/kanban/: data.js  kanban.html  kanban.js
app/main-menu/: main-menu.html  main-menu.js
app/material-icons/: icons.js  material-icons.css  material-icons.html  material-icons.js
app/monaco-editor/: monaco-editor.css  monaco-editor.html  monaco-editor.js
app/ollama/: ollama.css  ollama.html  ollama.js
app/ollama-tools/: ollama-tools.css  ollama-tools.html  ollama-tools.js
app/styles/: application.css
app/tab-sheet/: tab-sheet.css  tab-sheet.html  tab-sheet.js
app/tree-view/: tree-view.css  tree-view.html  tree-view.js
modules/: router.js  router.ts  view-loader.js
src/: main.js  main.ts
wasm/markdown/: Cargo.toml
(+196 files in other folders)
